--- a/singles.html
+++ b/singles.html
@@ -175,7 +175,7 @@
 
         <div class="container">
             <div onclick="play('https://cheekyjmusic.github.io/music/songs/twinkie.mp3', 'Corner Store Twinkie')" class="single-container">
-                <img id='Corner Store Twinkie' src="https://cheekyjmusic.github.io/music/assets/CornerStoreTwinkieng">
+                <img id='Corner Store Twinkie' src="https://cheekyjmusic.github.io/music/assets/CornerStoreTwinkie.png">
                 <div class="single-details">
                     <h2 class="single-name">Corner Store Twinkie</h2>
                     <p class="single-info">Single • 2023</p>
