--- a/cheekyboomin.html
+++ b/cheekyboomin.html
@@ -158,6 +158,7 @@
     </div>   
     <div class="song-info">
         <img class="song-playing" src="black.png">
+        <div class="song-name" id="song-name"> </div>
         <div class="current-time" id="current-time">0:00</div>
       </div> 
     <div class="progress-bar-container">
