--- a/cheekyboomin.html
+++ b/cheekyboomin.html
@@ -158,9 +158,11 @@
     </div>   
     <div class="song-info">
         <img class="song-playing" src="black.png">
-        <div class="song-name" id="song-name"> </div>
+     <div class="playing-details">
+        <div class="song-name" id="song-name">Song Name</div>
         <div class="current-time" id="current-time">0:00</div>
-      </div> 
+      </div>
+    </div>
     <div class="progress-bar-container">
         <div class="progress-bar"></div>
     </div>
