--- a/index.html
+++ b/index.html
@@ -154,6 +154,7 @@
      font-size: 26px;
      font-weight: bold;
      }
+     
     </style>
     <link rel="stylesheet" type="text/css" href="https://cheekyjmusic.github.io/music/player.css">
     <link rel="stylesheet" type="text/css" href="https://cheekyjmusic.github.io/music/menu.css">
@@ -296,9 +297,11 @@
     </div>   
     <div class="song-info">
         <img class="song-playing" src="black.png">
-        <div class="song-name" id="song-name"> </div>
+     <div class="playing-details">
+        <div class="song-name" id="song-name">Song Name</div>
         <div class="current-time" id="current-time">0:00</div>
-      </div> 
+      </div>
+    </div>
     <div class="progress-bar-container">
         <div class="progress-bar"></div>
     </div>
