--- a/index.html
+++ b/index.html
@@ -264,7 +264,7 @@
                     <img class="item-image" src="https://raw.githubusercontent.com/cheekyjmusic/music/main/assets/SumoWrestler.png">
                     <p class="item-name">Sumo Wrestler</p>
                 </div>
-                <div class="item" onclick="play('https://cheekyjmusic.github.io/music/songs/tacobell.mp3', 'Taco Bell Diss')">
+                <div class="item" onclick="play('https://cheekyjmusic.github.io/music/songs/tacobell.mp3', 'Tacobell Diss')">
                     <img class="item-image" src="https://raw.githubusercontent.com/cheekyjmusic/music/main/assets/TacobellDiss.png">
                     <p class="item-name">Taco Bell Diss</p>
                 </div>
