--- a/cheekyboomin.html
+++ b/cheekyboomin.html
@@ -168,28 +168,31 @@
     </div>
 
     <script>
-        function fullscreen() {
-            if (!document.fullscreenElement) {
-                if (document.documentElement.requestFullscreen) {
-                    document.documentElement.requestFullscreen();
-                } else if (document.documentElement.mozRequestFullScreen) {
-                    document.documentElement.mozRequestFullScreen();
-                } else if (document.documentElement.webkitRequestFullscreen) {
-                    document.documentElement.webkitRequestFullscreen();
-                } else if (document.documentElement.msRequestFullscreen) {
-                    document.documentElement.msRequestFullscreen();
-                }
-            } else {
-                if (document.exitFullscreen) {
-                    document.exitFullscreen();
-                } else if (document.mozCancelFullScreen) {
-                    document.mozCancelFullScreen();
-                } else if (document.webkitExitFullscreen) {
-                    document.webkitExitFullscreen();
-                } else if (document.msExitFullscreen) {
-                    document.msExitFullscreen();
-                }
-            }
+        const songsList = [
+    {
+        name: 'Submarine'
+    },
+    {
+        name: 'Metro Station'
+    },
+    {
+        name: 'Hotdog Stand'
+    },
+    {
+        name: 'Mr Clean'
+    },
+    {
+        name: 'Cheeky Boomin'
+    },
+    {
+        name: "Suburbs Freestyle Remix"
+    }
+];
+        audioPlayer.addEventListener('paused', playNext);
+
+        function playNext(){
+
+            play('', '')
         }
     </script>    
     <script src="https://cheekyjmusic.github.io/music/playfromurl.js"></script>
