--- a/index.html
+++ b/index.html
@@ -236,7 +236,7 @@
         <div class="container">
             <h2 style="display: inline;" class="section-title">Singles <a href="https://cheekyjmusic.github.io/music/singles.html" class="expand-singles">Expand</a></h2>
             <div class="item-container">
-              <div class="item" onclick="play('https://cheekyjmusic.github.io/music/songs/bighippo.mp3', 'Big Hippo')">
+              <div class="item" onclick="play('Big Hippo')">
                     <img class="item-image" src="https://cheekyjmusic.github.io/music/assets/BigHippo.png">
                     <p class="item-name">Big Hippo</p>
                 </div>
@@ -321,30 +321,6 @@
             }
         });
     </script>
-<script type="module">
-  // Import the functions you need from the SDKs you need
-  import { initializeApp } from "https://www.gstatic.com/firebasejs/10.5.0/firebase-app.js";
-  import { getAnalytics } from "https://www.gstatic.com/firebasejs/10.5.0/firebase-analytics.js";
-  // TODO: Add SDKs for Firebase products that you want to use
-  // https://firebase.google.com/docs/web/setup#available-libraries
-
-  // Your web app's Firebase configuration
-  // For Firebase JS SDK v7.20.0 and later, measurementId is optional
-  const firebaseConfig = {
-    apiKey: "AIzaSyC6Wg618hI6zDK_L-uAHxdQiLoeiid0qXg",
-    authDomain: "music-player-c9afe.firebaseapp.com",
-    projectId: "music-player-c9afe",
-    storageBucket: "music-player-c9afe.appspot.com",
-    messagingSenderId: "810670033115",
-    appId: "1:810670033115:web:293acf8d39eb4a928024fe",
-    measurementId: "G-XPHZ3SRML3"
-  };
-
-  // Initialize Firebase
-  const app = initializeApp(firebaseConfig);
-  const analytics = getAnalytics(app);
-</script>
-    
     <script src="https://cheekyjmusic.github.io/music/release.js"></script>    
     <script src="https://cheekyjmusic.github.io/music/playfromurl.js"></script>
     <script src="https://cheekyjmusic.github.io/music/menu.js"></script>
