--- a/cheekyboomin.html
+++ b/cheekyboomin.html
@@ -126,22 +126,22 @@
     </div>
     <div class="gradient-container"></div>
     <div class="songs-container">
-        <div onclick="play('https://cheekyjmusic.github.io/music/songs/Cheeky Boomin.mp3','Cheeky Boomin')" class="song">
+        <div onclick="play('Cheeky Boomin')" class="song">
             <p class="song-title">1. Cheeky Boomin (prod. XAR)</p>
         </div>
-        <div onclick="play('https://cheekyjmusic.github.io/music/songs/submarine.mp3','Submarine')" class="song">
+        <div onclick="play('Submarine')" class="song">
             <p class="song-title">2. Submarine (Prod. by SIGHOST x Sixweeks)</p>
         </div>
-        <div onclick="play('https://cheekyjmusic.github.io/music/songs/hds.mp3','Hotdog Stand')" class="song">
+        <div onclick="play('Hotdog Stand')" class="song">
             <p class="song-title">3. Hotdog Stand (prod. SIGHOST)</p>
         </div>
-        <div onclick="play('https://cheekyjmusic.github.io/music/songs/metro.mp3','Metro Station')" class="song">
+        <div onclick="play('Metro Station')" class="song">
             <p class="song-title">4. Metro Station (prod. SIGHOST)</p>
         </div>
-        <div onclick="play('https://cheekyjmusic.github.io/music/songs/sbremix.mp3','Suburbs Freestyle Remix')" class="song">
+        <div onclick="play('Suburbs Freestyle Remix')" class="song">
             <p class="song-title">5. Suburbs Freestyle Remix</p>
         </div>
-        <div onclick="play('https://cheekyjmusic.github.io/music/songs/mrclean.mp3','Mr Clean')" class="song">
+        <div onclick="play('Mr Clean')" class="song">
             <p class="song-title">6. Mr Clean (prod. makdouble)</p>
         </div>
     </div>
