--- a/index.html
+++ b/index.html
@@ -240,35 +240,35 @@
                     <img class="item-image" src="https://cheekyjmusic.github.io/music/assets/BigHippo.png">
                     <p class="item-name">Big Hippo</p>
                 </div>
-                <div class="item" onclick="play('https://cheekyjmusic.github.io/music/songs/Omelette.mp3', 'Omelette')">
+                <div class="item" onclick="play('Omelette')">
                     <img class="item-image" src="https://raw.githubusercontent.com/cheekyjmusic/music/main/assets/Omelette.png">
                     <p class="item-name">Omelette</p>
                 </div>
-                <div class="item" onclick="play('https://cheekyjmusic.github.io/music/songs/submarine.mp3', 'Submarine')">
+                <div class="item" onclick="play('Submarine')">
                     <img class="item-image" src="https://raw.githubusercontent.com/cheekyjmusic/music/main/assets/Submarine.png">
                     <p class="item-name">Submarine</p>
                 </div>
-                <div class="item" onclick="play('https://cheekyjmusic.github.io/music/songs/sbremix.mp3', 'Suburbs Freestyle Remix')">
+                <div class="item" onclick="play('Suburbs Freestyle Remix')">
                     <img class="item-image" src="https://raw.githubusercontent.com/cheekyjmusic/music/main/assets/SuburbsFreestyleRemix.png">
                     <p class="item-name">SB Freestyle Remix</p>
                 </div>
-                <div class="item" onclick="play('https://cheekyjmusic.github.io/music/songs/twinkie.mp3', 'Corner Store Twinkie')">
+                <div class="item" onclick="play('Corner Store Twinkie')">
                     <img class="item-image" src="https://raw.githubusercontent.com/cheekyjmusic/music/main/assets/CornerStoreTwinkie.png">
                     <p class="item-name">Corner Store Twinkie</p>
                 </div>
-                <div class="item" onclick="play('https://cheekyjmusic.github.io/music/songs/lincoln.mp3', '1860s Lincoln')">
+                <div class="item" onclick="play('1860s Lincoln')">
                     <img class="item-image" src="https://raw.githubusercontent.com/cheekyjmusic/music/main/assets/1860sLincoln.png">
                     <p class="item-name">1860s Lincoln</p>
                 </div>
-                <div class="item" onclick="play('https://cheekyjmusic.github.io/music/songs/sumo.mp3', 'Sumo Wrestler')">
+                <div class="item" onclick="play('Sumo Wrestler')">
                     <img class="item-image" src="https://raw.githubusercontent.com/cheekyjmusic/music/main/assets/SumoWrestler.png">
                     <p class="item-name">Sumo Wrestler</p>
                 </div>
-                <div class="item" onclick="play('https://cheekyjmusic.github.io/music/songs/tacobell.mp3', 'Tacobell Diss')">
+                <div class="item" onclick="play('Tacobell Diss')">
                     <img class="item-image" src="https://raw.githubusercontent.com/cheekyjmusic/music/main/assets/TacobellDiss.png">
                     <p class="item-name">Taco Bell Diss</p>
                 </div>
-                <div class="item" onclick="play('https://cheekyjmusic.github.io/music/songs/suburbsfreestyle.mp3', 'Suburbs Freestyle')">
+                <div class="item" onclick="play('Suburbs Freestyle')">
                     <img class="item-image" src="https://raw.githubusercontent.com/cheekyjmusic/music/main/assets/SuburbsFreestyle.png">
                     <p class="item-name">Suburbs Freestyle</p>
                 </div>
