--- a/singles.html
+++ b/singles.html
@@ -118,7 +118,7 @@
             <a style="text-decoration: none;" href="https://cheekyjmusic.github.io/music/"><h2>Cheeky J - Discography</h2></a>
         </div>
         <div class="container">
-            <div onclick="play('https://cheekyjmusic.github.io/music/songs/bighippo.mp3', 'Big Hippo')" class="single-container">
+            <div onclick="play('Big Hippo')" class="single-container">
                 <img id='Big Hippo' src="https://cheekyjmusic.github.io/music/assets/BigHippo.png">
                 <div class="single-details">
                     <h2 class="single-name">Big Hippo</h2>
@@ -128,7 +128,7 @@
             </div>
         </div>
         <div class="container">
-            <div onclick="play('https://cheekyjmusic.github.io/music/songs/Omelette.mp3', 'Omelette')" class="single-container">
+            <div onclick="play('Omelette')" class="single-container">
                 <img id='Omelette' src="https://cheekyjmusic.github.io/music/assets/Omelette.png">
                 <div class="single-details">
                     <h2 class="single-name">Omelette</h2>
@@ -139,7 +139,7 @@
         </div>
 
         <div class="container">
-            <div onclick="play('https://cheekyjmusic.github.io/music/songs/submarine.mp3', 'Submarine')" class="single-container">
+            <div onclick="play('Submarine')" class="single-container">
                 <img id='Submarine' src="https://cheekyjmusic.github.io/music/assets/Submarine.png">
                 <div class="single-details">
                     <h2 class="single-name">Submarine</h2>
@@ -150,7 +150,7 @@
         </div>
 
         <div class="container">
-            <div onclick="play('https://cheekyjmusic.github.io/music/songs/sbremix.mp3', 'Suburbs Freestyle Remix')" class="single-container">
+            <div onclick="play('Suburbs Freestyle Remix')" class="single-container">
                 <img id='Suburbs Freestyle Remix' src="https://cheekyjmusic.github.io/music/assets/SuburbsFreestyleRemix.png">
                 <div class="single-details">
                     <h2 class="single-name">Suburbs Freestyle Remix</h2>
@@ -161,7 +161,7 @@
         </div>
 
         <div class="container">
-            <div onclick="play('https://cheekyjmusic.github.io/music/songs/twinkie.mp3', 'Corner Store Twinkie')" class="single-container">
+            <div onclick="play('Corner Store Twinkie')" class="single-container">
                 <img id='Corner Store Twinkie' src="https://cheekyjmusic.github.io/music/assets/CornerStoreTwinkie.png">
                 <div class="single-details">
                     <h2 class="single-name">Corner Store Twinkie</h2>
@@ -172,7 +172,7 @@
         </div>
 
         <div class="container">
-            <div onclick="play('https://cheekyjmusic.github.io/music/songs/lincoln.mp3', '1860s Lincoln')" class="single-container">
+            <div onclick="play('1860s Lincoln')" class="single-container">
                 <img id='1860s Lincoln' src="https://cheekyjmusic.github.io/music/assets/1860sLincoln.png">
                 <div class="single-details">
                     <h2 class="single-name">1860s Lincoln</h2>
@@ -183,7 +183,7 @@
         </div>
 
         <div class="container">
-            <div onclick="play('https://cheekyjmusic.github.io/music/songs/sumo.mp3', 'Sumo Wrestler')" class="single-container">
+            <div onclick="play('Sumo Wrestler')" class="single-container">
                 <img id="Sumo Wrestler" src="https://cheekyjmusic.github.io/music/assets/SumoWrestler.png">
                 <div class="single-details">
                     <h2 class="single-name">Sumo Wrestler</h2>
@@ -194,7 +194,7 @@
         </div>
 
         <div class="container">
-            <div onclick="play('https://cheekyjmusic.github.io/music/songs/tacobell.mp3', 'Tacobell Diss')" class="single-container">
+            <div onclick="play('Tacobell Diss')" class="single-container">
                 <img id="Tacobell Diss" src="https://cheekyjmusic.github.io/music/assets/TacobellDiss.png">
                 <div class="single-details">
                     <h2 class="single-name">Tacobell Diss</h2>
@@ -205,7 +205,7 @@
         </div>
 
         <div class="container">
-            <div onclick="play('https://cheekyjmusic.github.io/music/songs/suburbsfreestyle.mp3', 'Suburbs Freestyle')" class="single-container">
+            <div onclick="play('Suburbs Freestyle')" class="single-container">
                 <img id="Suburbs Freestyle" src="https://cheekyjmusic.github.io/music/assets/SuburbsFreestyle.png">
                 <div class="single-details">
                     <h2 class="single-name">Suburbs Freestyle</h2>
