--- a/index.html
+++ b/index.html
@@ -211,11 +211,11 @@
         <div class="top-container">
             <div class="popular-container">
             <h2 class="section-title">Popular</h2>
-            <p onclick="play('https://cheekyjmusic.github.io/music/songs/metro.mp3', 'Metro Station')" class="popular">1<img class="popular-image" src="https://raw.githubusercontent.com/cheekyjmusic/music/main/assets/cheekyboomin.png">Metro Station</p>
-            <p onclick="play('https://cheekyjmusic.github.io/music/songs/Omelette.mp3', 'Omelette')" class="popular">2<img class="popular-image" src="https://cheekyjmusic.github.io/music/assets/Omelette.png">Omelette</p>
-            <p onclick="play('https://cheekyjmusic.github.io/music/songs/bighippo.mp3','Big Hippo');" class="popular">3<img class="popular-image" src="https://cheekyjmusic.github.io/music/assets/BigHippo.png">Big Hippo</p>
-            <p onclick="play('https://cheekyjmusic.github.io/music/songs/hds.mp3', 'Hotdog Stand')" class="popular">4<img class="popular-image" src="https://raw.githubusercontent.com/cheekyjmusic/music/main/assets/cheekyboomin.png">Hotdog Stand</p>
-            <p onclick="play('https://cheekyjmusic.github.io/music/songs/submarine.mp3', 'Submarine')" class="popular">5<img class="popular-image" src="https://cheekyjmusic.github.io/music/assets/Submarine.png">Submarine</p>
+            <p onclick="play('Metro Station')" class="popular">1<img class="popular-image" src="https://raw.githubusercontent.com/cheekyjmusic/music/main/assets/cheekyboomin.png">Metro Station</p>
+            <p onclick="play('Omelette')" class="popular">2<img class="popular-image" src="https://cheekyjmusic.github.io/music/assets/Omelette.png">Omelette</p>
+            <p onclick="play('Big Hippo');" class="popular">3<img class="popular-image" src="https://cheekyjmusic.github.io/music/assets/BigHippo.png">Big Hippo</p>
+            <p onclick="play('Hotdog Stand')" class="popular">4<img class="popular-image" src="https://raw.githubusercontent.com/cheekyjmusic/music/main/assets/cheekyboomin.png">Hotdog Stand</p>
+            <p onclick="play('Submarine')" class="popular">5<img class="popular-image" src="https://cheekyjmusic.github.io/music/assets/Submarine.png">Submarine</p>
             </div>
             <!--<div class="artist-announcement">
                 <h1 class="announcement-title">Artist Announcement</h1>
