add cheeky boomin in discography

--- a/singles.html
+++ b/singles.html
@@ -138,6 +138,17 @@
             </div>
         </div>
 
+        <a style="text-decoration: none;" href="https://cheekyjmusic.github.io/music/cheekyboomin.html"><div class="container">
+            <div style="background-color: rgb(56, 41, 13);" class="single-container">
+                <img id='Cheeky Boomin' src="https://cheekyjmusic.github.io/music/assets/cheekyboomin.png">
+                <div class="single-details">
+                    <h2 class="single-name">Cheeky Boomin Vol 1</h2>
+                    <p style="color: rgba(255, 255, 255, 0.750);" class="single-info">Album • 2023</p>
+                    <p style="color: rgba(255, 255, 255, 0.750);" class="single-info">6 songs</p>
+                </div>
+            </div>
+        </div></a>
+
         <div class="container">
             <div onclick="play('Submarine')" class="single-container">
                 <img id='Submarine' src="https://cheekyjmusic.github.io/music/assets/Submarine.png">
