--- a/cheekyboomin.html
+++ b/cheekyboomin.html
@@ -155,7 +155,10 @@
         <div class="play-pause-container" onclick="togglePlayPause()">
             <img class="play-pause-image" src="https://raw.githubusercontent.com/cheekyjmusic/music/main/assets/pause.svg">
         </div>
-    </div>   
+        <div onclick="favorite()" class="save-button-container">
+            <img class="save-button" src="https://cheekyjmusic.github.io/music/assets/heartempty.svg">
+        </div>
+    </div>  
     <div class="song-info">
         <img class="song-playing" src="black.png">
      <div class="playing-details">
