--- a/index.html
+++ b/index.html
@@ -154,9 +154,9 @@
      font-size: 26px;
      font-weight: bold;
      }
-     
+
     </style>
-    <link rel="stylesheet" type="text/css" href="https://cheekyjmusic.github.io/music/player.css">
+	<link rel="stylesheet" type="text/css" href="https://cheekyjmusic.github.io/music/player.css">
     <link rel="stylesheet" type="text/css" href="https://cheekyjmusic.github.io/music/menu.css">
 </head>
 <body>
@@ -293,6 +293,9 @@
     <div class="bottom-rectangle">
         <div class="play-pause-container" onclick="togglePlayPause()">
             <img class="play-pause-image" src="https://raw.githubusercontent.com/cheekyjmusic/music/main/assets/pause.svg">
+        </div>
+        <div onclick="favorite()" class="save-button-container">
+            <img class="save-button" src="https://cheekyjmusic.github.io/music/assets/heartempty.svg">
         </div>
     </div>   
     <div class="song-info">
