--- a/index.html
+++ b/index.html
@@ -295,7 +295,7 @@
             <img class="play-pause-image" src="https://raw.githubusercontent.com/cheekyjmusic/music/main/assets/pause.svg">
         </div>
         <div onclick="favorite()" class="save-button-container">
-            <img class="save-button" src="https://cheekyjmusic.github.io/music/assets/heartempty.svg">
+            <img class="save-button" src="https://cheekyjmusic.github.io/music/assets/heartempty.png">
         </div>
     </div>   
     <div class="song-info">
