--- a/cheekyboomin.html
+++ b/cheekyboomin.html
@@ -161,10 +161,13 @@
     </div>  
     <div class="song-info">
         <img class="song-playing" src="black.png">
-     <div class="playing-details">
-        <div class="song-name" id="song-name">Song Name</div>
-        <div class="current-time" id="current-time">0:00</div>
-      </div>
+        <div class="playing-details">
+            <div class="song-name" id="song-name">Song Name</div>
+            <div class="current-time" id="current-time">0:00</div>
+              <div onclick="favorite()" class="save-button-container">
+                <img class="save-button" src="https://cheekyjmusic.github.io/music/assets/heartempty.png">
+            </div>
+          </div>
     </div>
     <div class="progress-bar-container">
         <div class="progress-bar"></div>
