--- a/singles.html
+++ b/singles.html
@@ -90,6 +90,10 @@
             <img src="https://cdn-icons-png.flaticon.com/512/3031/3031293.png">
             <h1>Search</h1>
         </div></a>
+        <a style="text-decoration: none;" href="https://cheekyjmusic.github.io/music/saved.html"><div style="margin-top: 10px;" class="menu-item">
+            <img src="https://cdn-icons-png.flaticon.com/512/2956/2956783.png">
+            <h1>Saved</h1>
+        </div></a>
         <a style="text-decoration: none;" href="https://cheekyjmusic.github.io/music/credits.txt"><div style="margin-top: 10px;" class="menu-item">
             <img src="https://cdn-icons-png.flaticon.com/512/864/864685.png">
             <h1>Credits</h1>
@@ -105,10 +109,6 @@
         <a style="text-decoration: none;" href="https://cheekyjmusic.github.io/music/archive.html"><div style="margin-top: 10px;" class="menu-item">
             <img src="https://static.thenounproject.com/png/21032-200.png">
             <h1>Archive</h1>
-        </div></a>
-        <a style="text-decoration: none;" href="https://github.com/cheekyjmusic/music/issues/new"><div style="margin-top: 10px;" class="menu-item">
-            <img src="https://cdn-icons-png.flaticon.com/512/193/193224.png">
-            <h1>Report Bug</h1>
         </div></a>
     </div>
 
