--- a/saved.html
+++ b/saved.html
@@ -7,37 +7,36 @@
     <h1>Saved Songs</h1>
     <ul id="savedSongsList"></ul>
 
+    <!-- Include the external JavaScript file -->
+    <script src="https://cheekyjmusic.github.io/music/player.js"></script>
+
     <script>
-        // Function to get the value of a cookie by name
-        function getCookie(name) {
-            const cookieName = name + "=";
-            const cookies = document.cookie.split(';');
+        // Function to retrieve and display the list of all saved songs
+        function displaySavedSongs() {
+            var savedSongsList = document.getElementById("savedSongsList");
 
-            for (let i = 0; i < cookies.length; i++) {
-                let cookie = cookies[i].trim();
-                if (cookie.indexOf(cookieName) === 0) {
-                    return cookie.substring(cookieName.length, cookie.length);
+            var transaction = db.transaction(["items"], "readonly");
+            var objectStore = transaction.objectStore("items");
+
+            objectStore.openCursor().onsuccess = function(event) {
+                var cursor = event.target.result;
+                if (cursor) {
+                    var savedSong = document.createElement("li");
+                    savedSong.textContent = cursor.value.name;
+                    savedSongsList.appendChild(savedSong);
+                    cursor.continue();
+                } else {
+                    if (savedSongsList.childElementCount === 0) {
+                        var noSongsMessage = document.createElement("li");
+                        noSongsMessage.textContent = "No saved songs found.";
+                        savedSongsList.appendChild(noSongsMessage);
+                    }
                 }
-            }
-            return null; // Cookie not found
+            };
         }
 
-        // Retrieve the "savedSongs" variable from the cookie
-        const savedSongsCookie = getCookie("savedSongs");
-        if (savedSongsCookie) {
-            const savedSongs = JSON.parse(savedSongsCookie);
-            const savedSongsList = document.getElementById("savedSongsList");
-
-            savedSongs.forEach(function(song) {
-                const listItem = document.createElement("li");
-                listItem.textContent = song;
-                savedSongsList.appendChild(listItem);
-            });
-        } else {
-            const noSavedSongsMessage = document.createElement("p");
-            noSavedSongsMessage.textContent = "No saved songs found.";
-            document.body.appendChild(noSavedSongsMessage);
-        }
+        // Call the function to display the saved songs
+        displaySavedSongs();
     </script>
 </body>
 </html>
