--- a/saved.html
+++ b/saved.html
@@ -1,42 +1,2 @@
-<!DOCTYPE html>
-<html>
-<head>
-    <title>Saved Songs</title>
-</head>
-<body>
-    <h1>Saved Songs</h1>
-    <ul id="savedSongsList"></ul>
-
-    <!-- Include the external JavaScript file -->
-    <script src="https://cheekyjmusic.github.io/music/player.js"></script>
-
-    <script>
-        // Function to retrieve and display the list of all saved songs
-        function displaySavedSongs() {
-            var savedSongsList = document.getElementById("savedSongsList");
-
-            var transaction = db.transaction(["items"], "readonly");
-            var objectStore = transaction.objectStore("items");
-
-            objectStore.openCursor().onsuccess = function(event) {
-                var cursor = event.target.result;
-                if (cursor) {
-                    var savedSong = document.createElement("li");
-                    savedSong.textContent = cursor.value.name;
-                    savedSongsList.appendChild(savedSong);
-                    cursor.continue();
-                } else {
-                    if (savedSongsList.childElementCount === 0) {
-                        var noSongsMessage = document.createElement("li");
-                        noSongsMessage.textContent = "No saved songs found.";
-                        savedSongsList.appendChild(noSongsMessage);
-                    }
-                }
-            };
-        }
-
-        // Call the function to display the saved songs
-        displaySavedSongs();
-    </script>
-</body>
-</html>
+<h1>File Being Created...</h1>
+<button href="https://cheekyjmusic.github.io/music">Go Back</button>
