--- a/index.html
+++ b/index.html
@@ -48,7 +48,6 @@
         .main-container {
             padding: 20px;
             background: linear-gradient(to bottom, #282008 0%, black 7%);
-            min-height: 1220px;
         }
 
         .section-title {
@@ -153,6 +152,23 @@
      margin: 0px;
      font-size: 26px;
      font-weight: bold;
+     }
+     .about-img {
+        width: 100%;
+            height: 400px;
+            object-fit: cover;
+            object-position: center;
+            display: block;
+            border-radius: 10px;
+     }
+     .about {
+        position: absolute;
+        padding: 10px;
+        font-size: 20px;
+        color: rgba(255, 255, 255, 0.75);
+        background-color: rgba(0, 0, 0, 0.5);
+        margin-top: 0px;
+
      }
      
     </style>
@@ -283,6 +299,11 @@
                     <p class="item-name">Suburbs Freestyle</p>
                 </div>
             </a>            
+        </div>
+        <div style="margin-bottom: 80px;" class="container">
+            <h2 class="section-title">About</h2>
+            <p class="about">Cheeky J is a humble artist from Los Angeles. After releasing his first single "Suburbs Freestyle" on May 30, he decided to keep making more songs.</p>
+            <img class="about-img" src="https://cheekyjmusic.github.io/music/assets/about.jpg">
         </div>
     </div>
 
